<resources>
    <string name="app_name">CS490</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="text_recipeFinder">Recipe Finder</string>
    <string name="tempText_ingredientSearchPage">Ingredient Search Page</string>
    <string name="tempText_ingredientResultPage">Recipe Page</string>
    <string name="text_search">Search</string>
    <string name="tempText_search">Search&#8230;</string>
    <string name="threeMatches">Three Matches</string>
    <string name="recipe1">Ultimate Maple Snickerdoodles</string>
    <string name="recipe2">90-Second Keto Bread in a Mug</string>
    <string name="recipe3">Gluten-Free Sugar Cookies</string>
</resources>
