<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResultsPage">

    <TextView
        android:id="@+id/textView_tempPage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tempText_ingredientResultPage"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/recipeImage1"
        android:layout_width="155dp"
        android:layout_height="153dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@android:string/unknownName"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recipe1" />

    <Button
        android:id="@+id/recipeButton1"
        android:layout_width="166dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/recipe1"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recipeButton2"
        android:layout_width="166dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="280dp"
        android:text="@string/recipe2"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recipeButton3"
        android:layout_width="166dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="480dp"
        android:text="@string/recipe3"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/threeMatches"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeButton1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/threeMatches"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeButton3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/threeMatches"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/recipeImage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeButton2" />

    <ImageButton
        android:id="@+id/recipeImage2"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@android:string/unknownName"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recipe2" />

    <ImageButton
        android:id="@+id/recipeImage3"
        android:layout_width="154dp"
        android:layout_height="152dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@android:string/unknownName"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recipe3" />
</androidx.constraintlayout.widget.ConstraintLayout>